# WeeklySprints

./: README.md
cellular_automata/: .gitignore  CMakeLists.txt  README.md
cellular_automata/header/: canvas.hpp  cell.hpp  game.hpp  grid.hpp  objects.hpp  timer.hpp  types.hpp  u_window.hpp  utility.hpp
cellular_automata/header/automatons/: conways_game_of_life.hpp  elementary_automaton.hpp  i_automaton.hpp  langtons_ant.hpp  wireworld.hpp
cellular_automata/src/: canvas.cpp  cell.cpp  game.cpp  main.cpp  objects.cpp  timer.cpp  u_window.cpp  utility.cpp
cellular_automata/src/automatons/: conways_game_of_life.cpp  elementary_automaton.cpp  langtons_ant.cpp  wireworld.cpp
encryption_algorithms/: README.md  cezer_cypher.py  i_encryption.py  main.py  monoalphabetic.py  playfair.py  vigenere.py
huffman_and_differential_coding/: .gitignore  Cargo.toml  README.md
huffman_and_differential_coding/src/: coding.rs  huffman.rs  lib.rs  main.rs
kvm_linux/Lv_A/: .gitignore  Makefile  mini_hypervisor
kvm_linux/Lv_B/: guest.img  mini_hypervisor
kvm_linux/Lv_C/: 2flowers.txt  Makefile  guest.img  mini_hypervisor  multiple_write.txt  to_duplicate.ppm
oop1_2024/interpreter/: test.txt  test_batch.txt
rust_simple_vec/: Cargo.toml  README.md
rust_simple_vec/src/: main.rs
sdl2_base/: .gitignore  CMakeLists.txt  README.md
sdl2_base/header/: Game.hpp  Objects.hpp  U_Window.hpp
sdl2_base/src/: Game.cpp  Objects.cpp  U_Window.cpp  main.cpp
simple_shell/: README.md
simple_shell/src/: main.rs
text_editor/: Cargo.toml  README.md  breakpoints.txt  emoji_test.txt  t.txt  test_file.txt
text_editor/src/: editor.rs  main.rs
text_editor/test_files/: buggy_test_file.txt  easy_annotation_test.txt  emoji_test.txt  (+7 more)
vulkano_book/: Cargo.toml  README.md
(+100 files in other folders)
